# PCN

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  run.sh
.github/workflows/: cmake-multi-platform.yml
alpha0.0.1/includes/: Activations.h  Optimize.h
includes/: Activations.h  Optimize.h  PCNLayer.h  PCNNetwork.h  SplitMix64.h
pybind/: binding.cpp
src/: PCLayer.cpp  PCNLayer.cpp  PCNNetwork.cpp  RBLayer.cpp  main.cpp
tests/: tActivations.cpp  tBatches.cpp  tNetwork.cpp
tests/python/: tNetwork.py
